[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons_Essential_v1.0/Ver1.1/PNG/sound_speaker_on.png" type="Texture" id=2]
[ext_resource path="res://font16.tres" type="DynamicFont" id=3]

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 210.0
margin_top = 71.0
margin_right = 430.0
margin_bottom = 301.0
color = Color( 0.0705882, 0.0392157, 0.0392157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -106.0
margin_right = 82.0
margin_bottom = 107.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 163.0
margin_bottom = 14.0
text = "volume"

[node name="volume" type="HSlider" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 163.0
margin_bottom = 36.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 163.0
margin_bottom = 56.0
text = "Music"

[node name="Music" type="HSlider" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 163.0
margin_bottom = 78.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 163.0
margin_bottom = 98.0
text = "Sounds"

[node name="Sounds" type="HSlider" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 163.0
margin_bottom = 120.0
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="FullScreenBtn" type="CheckButton" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 163.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 3 )
text = "Full Screen"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 163.0
margin_bottom = 197.0
custom_fonts/font = ExtResource( 3 )
text = "กลับ"

[node name="ToolButton" type="ToolButton" parent="VBoxContainer"]
margin_top = 203.0
margin_right = 163.0
margin_bottom = 225.0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 231.0
margin_right = 163.0
margin_bottom = 231.0

[connection signal="value_changed" from="VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sounds" to="." method="_on_Sounds_value_changed"]
[connection signal="pressed" from="VBoxContainer/FullScreenBtn" to="." method="_on_FullScreen_CheckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
